# daily-prioritizer

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: calendar.rs  main.rs  notion.rs  wifi.rs
src/gemini/: gemini.rs  mod.rs  response_parse.rs
src/waveshare/: display.rs  font.rs  mod.rs
