[package]
name = "daily-prioritizer"
version = "0.1.0"
edition = "2021"
authors = ["David LaBarbera"]
license = "MIT"
rust-version = "1.77"

[dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
log = "0.4"
libc = "0.2"

# to disable more strict security not available on esp32
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "rsa", "pem", "use_pem"] }

# esp32 deps
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-hal = "0.45"
esp-idf-svc = { version = "0.51", features = ["native"] }
embedded-svc = "0.28"
esp_idf_logger = "0.1"

# Calendar module dependencies
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

# Notion module dependencies
dotenvy = "0.15"
urlencoding = "2"

# gemini
minijinja = "1.0"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]
